# cto.newtest

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_system.py  validate_system.sh
exchange/: __init__.py  bybit_client.py  models.py
reconciliation/: __init__.py  reconciler.py
src/cli/: dashboard.py
src/config/: settings.py
src/execution/: __init__.py  execution_loop.py  filters.py  governor.py  order_manager.py  signal_router.py
src/storage/: __init__.py  models.py  sqlite_manager.py
storage/: __init__.py  database.py  models.py
strategy_risk_engine/: __init__.py  models.py  risk.py  sizing.py  strategy.py
tests/: test_basic_functionality.py  test_exchange_and_storage.py  test_strategy_and_risk_engine.py
